--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Probapply</title>
+    <title>Neuralnet</title>
     <meta charset="utf8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
